--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: lightgray;
+  text-align: center;
+  font-family: "Roboto", serif;
 }
 
 code {
