--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ form {
   flex-flow: column nowrap;
   align-self: center;
   padding: 25px;
-  margin: 20px auto auto;
+  margin: 50px auto auto;
   text-align: center;
   align-items: stretch;
   justify-content: space-evenly;
@@ -57,4 +57,49 @@ form {
 .required {
   color: darkred;
   align-self: flex-end;
+}
+
+.snackbar {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  height: auto;
+  max-width: 400px; /* Set a default minimum width */
+  align-self: center;
+  background-color: whitesmoke; /* Black background color */
+  border: 2px solid black;
+  text-align: center; /* Centered text */
+  padding: 16px; /* Padding */
+  position: absolute; /* Sit on top of the screen */
+  left: 0;
+  right: 0;
+  top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1; /* Add a z-index if needed */
+}
+
+.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {top: 0; opacity: 0;}
+  to {top: 20px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {top: 0; opacity: 0;}
+  to {top: 20px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {top: 20px; opacity: 1;}
+  to {top: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {top: 20px; opacity: 1;}
+  to {top: 0; opacity: 0;}
 }
